# smithers

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  DESIGN_AGENT_PROMPT.md  PROGRESS.md  RALPH.md  README.md  build.zig  build.zig.zon  devtools-workflow.toon  package-lock.json  package.json  pyproject.toml  tsconfig.json
.smithers/: agents.ts  package.json
changelogs/: 0.14.0.md
docs/: docs.json  index.mdx  installation.mdx  introduction.mdx  llms-full.txt  llms.txt  production.md  quickstart.mdx  uispec.md
docs/cli/: overview.mdx
examples/: 01_hello_world.py  02_dependencies.py  03_parallel.py  04_caching.py  05_tools.py  06_code_review_pipeline.py  07_research_agent.py  __init__.py  audit.tsx  changelog.tsx  coverage-loop.tsx  debate.tsx  dependency-update.tsx  discovery.tsx  doc-sync.tsx  etl.tsx  fan-out-fan-in.tsx  gastown.tsx  gate.tsx  kanban.tsx  migration.tsx  milestone.tsx  panel.tsx  pi-hello-world.tsx  plan.tsx  pr-lifecycle.tsx  refactor.tsx  review-cycle.tsx  scaffold.tsx  smoketest.tsx  supervisor.tsx  triage.tsx  waterfall.tsx
include/: module.modulemap  smithers.h
observability/: docker-compose.otel.yml  otel-collector-config.yml
reviews/: ui.md
scripts/: check-desktop-package-sync.py  copy-source.ts  docs-utils.ts  obs-reset.sh  obs-wait-healthy.sh  ralph-loop.py  verify-observability.sh
src/: AgentLike.ts  RunOptions.ts  SmithersCtx.ts  SmithersEvent.ts  agent-trace.ts  components.ts  context.ts  create.ts  events.ts  index.ts  mdx-components.ts  revert.ts  types.ts
tests/: agent-trace.test.tsx  camel-to-snake.test.ts  devtools.test.ts  docs-contract-components.test.tsx  docs-contract-runtime.test.tsx  docs-examples.test.tsx  effect-fixtures.test.ts  engine-approvals.test.ts  engine-worktree.test.tsx  engine.test.tsx  errors.test.ts  graph-subpath.test.ts  helpers.ts  merge-queue.test.tsx  observability.test.ts  openapi-ref-resolver.test.ts  parallel-edges.test.tsx  pi-support.test.ts  scheduler.worktree-plan.test.ts  schema-validation.test.tsx  sdk-agents.test.ts  server.test.ts  test_agentd.py  test_analytics.py  test_cache.py  test_claude.py  test_cli_compose.py  test_cli_observability.py  test_cli_stats.py  test_cli_verify.py  test_cli_websocket.py  test_composition.py  test_conditions.py  test_config.py  test_errors.py  test_events.py  test_events_integration.py  test_execution.py  test_executor.py  test_fake_llm.py  (+28 more)
workflows/: agent-trace-otel-demo.tsx  agent-trace-otel-loop.tsx  (+1 more)
(+283 files in other folders)
